提供登录状态查询能力